fix bg colour, realign links, make urls kebab-case

--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,22 @@
 /* index.html */
 
-* {
+/* * {
   background-color: #dfece175;
-}
+} */
 
 body {
+  background-color: #dfece1;
   font-family: 'IBM Plex Mono', monospace;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: #222;
   text-align: center;
-
   line-height: 1.4em;
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 0;
   margin-top: 40px;
 }
@@ -38,7 +41,11 @@ code {
 }
 
 ul {
+  display: inline-block;
+  text-align: left;
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 li {
@@ -47,5 +54,9 @@ li {
 
 a {
   text-decoration: none;
-  color: #2574a9;
+  font-weight: 500;
+  color: #008080;
+}
+a:hover {
+  color: #004d4d;
 }
